--- a/birthday.html
+++ b/birthday.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>炫酷爱心特效</title>
+    <title>于洪茜我爱你 葛益楠./</title>
     <style>
         body {
             margin: 0;
